# glavkrepezh

./: .dockerignore  .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yml  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 122c2bbfc7c1_fix_doc_models.py  1235748446df_добавлены_модели_прайс_листа.py  296898f67195_fix_backpopulates.py  3b1e34aa515a_добавлены_модели_для_таблицылистов.py  4d49afcbc41d_add_feedback.py  9ca1d61967e8_fix_category_model.py  d07a03365272_add_trgm.py  d0939cb04506_initial_migration.py  df5bdf07c817_fix_doc_models_2.py
build-tailwind/: package-lock.json  package.json  tailwind.config.js
src/: config.py  database.py  depends.py  main.py
src/admin/: auth.py  models.py  service.py  setup.py  views.py
src/auth/: models.py  security.py
src/catalog/: models.py  router.py
src/feedback/: models.py  notifications.py  router.py  schemas.py  telegram.py
src/pages/: router.py
static/css/: fonts.css  styles.css
static/favicon/: site.webmanifest
static/images/: bolt.webm  glavkrepezh.avif  layer-1(1).avif  layer-1.avif  layer-2(1).avif  layer-2.avif  layer-3(1).avif  layer-3.avif  map-ovrlay.avif  map.avif  warehouse.avif
templates/: 404.html  AboutPage.html  CatalogPage.html  ConsentPage.html  ContactsPage.html  DeliveryPage.html  HomePage.html  PrivacyPage.html  index.html  layout.html
templates/admin/: base.html
templates/components/: brands.html  categories_grid.html  cookie_banner.html  delivery_cards.html  features.html  feedback_form.html  footer.html  header.html  hero.html  map_section.html  (+3 more)
(+46 files in other folders)
